
* Colorful tags in tag editor and in searching

* Tags in the tag editor is now separated by spaces (comma still works)

* New configuration option 'signature_separate' determines if inline
  signatures will be separated from the message by a line containing '-- '.

* Configurable query associated with account can be used to select account as
  From: when replying or forwarding e-mail.

== v0.9.1 / 2017-04-30

* Support old vte3.
* Support old _st versions on Arch.

== v0.9 / 2017-04-28

* Drop use of old deprecated non _st functions, use their new names. Will
  require 0.24 or newer.

* No longer support pre-lastmod notmuches.

* Catch missing content errors for messages, not fail.

* Wait and block R/O database opening, not fail.

* Defer changed_thread events on thread-index while still loading.

* Do not update tags in thread-view when not ready.

* configuration option thread_view.expand_flagged determines whether flagged
  messages are expanded by default.

* Better handle poll thread. Make sure to clean up connections here and in send_message.

* Polling can be cancelled with C-c in main window.

* Archive or close thread and then directly open next or next unread thread
  in originating thread-index.

== v0.8 / 2017-03-17

* New logo and icons by Elio Qoshi ( http://patreon.com/ura )

* Run hook for thread-view (Hugo Roy)

* Session-persistent folder history for attaching files and saving
  attachments. default is configurable.

* Remove duplicates when reply-all'ing.

* Handle mailto when astroid is already running.

* `scons --propagate-environment` uses environment from build environment.

* Show pane-focus with blue bar at top, swap focus with M-space. The
  keybinding is now located at 'pane.swap_focus'.

* Add optional drop-down terminal ('|') which has session-persistent
  working directory. Will silently be disabled if VTE is missing.

* Delay sending of message with configured time, in order to be able to
  cancel wrongly sent messages.
