@@ -12,6 +12,10 @@
 * Configurable query associated with account can be used to select account as
   From: when replying or forwarding e-mail.
 
+* Select target for yank operations with '"'
+
+* Track focus changes manually
+
 == v0.9.1 / 2017-04-30
 
 * Support old vte3.
